--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --black--light: #1b1b1b;
+  --bloe: rgba(0,0,0,0.3);
+  --black2: #2c2b2b;
+  --white2: #fffbfb;
+  --grey--dark: rgba(255, 251, 251, 0.65);
+  --grey--light: rgba(255, 251, 251, 0.35);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #1b1b1b;
+}
+
+
+
+@layer base {
+  li {
+    @apply  md:p-5 md:pt-8 lg:p-8 text-xl font-semibold text-white
+  }
+
+  button {
+    @apply text-black bg-white py-3 px-6 rounded-md font-semibold text-xl
+  }
+
+  .arrow {
+    @apply absolute text-2xl text-white cursor-pointer bg-[var(--bloe)] h-full 
+  }
+  
 }
